# keyboard-check

./: AGENTS.md  Cargo.toml  LICENSE  README.md  README_CN.md
src/: app.rs  global_block.rs  main.rs  ui.rs
