[package]
name = "keyboard-check"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
